# ad_codegen_rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
bench_report/: Cargo.toml
docs/: architecture.md  getting-started.md  symbolic-nlp.md  testing.md  upstream-followup.md
examples_run/: Cargo.toml
examples_source/: Cargo.toml
optimization/: Cargo.toml
optimization/src/: interior_point.rs  ipopt_backend.rs  lib.rs  symbolic.rs  vectorize.rs
optimization/tests/: interior_point.rs  ipopt.rs  sqp.rs  sqp_callback_api.rs  symbolic_jit_nlp.rs  vectorize_layout.rs
optimization/tests/support/: generated_problem.rs
optimization_derive/: Cargo.toml
optimization_derive/src/: lib.rs
sx_codegen/: Cargo.toml
sx_codegen_llvm/: Cargo.toml
sx_codegen_llvm/src/: lib.rs
sx_codegen_llvm/tests/: numerical_derivatives.rs
sx_core/: Cargo.toml
sx_core/src/: sx.rs
sx_core/tests/: casadi_parity.rs  core.rs
test_problems/: Cargo.toml
test_problems/src/: dashboard.rs  lib.rs  manifest.rs  model.rs  registry.rs  report.rs  runner.rs  transcript.rs
test_problems/src/problems/: brown_almost_linear.rs  disk_rosenbrock.rs  generalized_rosenbrock.rs  hanging_chain.rs  hs021.rs  hs035.rs  hs071.rs  mod.rs  parameterized_quadratic.rs  powell_singular.rs  trigonometric.rs  wood.rs
test_problems/tests/: known_passing.rs
test_support/: symbolic_eval.rs
xtask/: Cargo.toml
