[package]
name = "examples_source"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Internal symbolic example problem definitions for ad_codegen_rs."

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
sx_core = { path = "../sx_core" }
