[package]
name = "sx_codegen"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Backend-neutral lowering for symbolic SX functions in ad_codegen_rs."

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
sx_core = { path = "../sx_core" }

[dev-dependencies]
examples_source = { path = "../examples_source" }
