[package]
name = "sx_core"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Symbolic scalar expressions, sparse SX matrices, and automatic differentiation for ad_codegen_rs."

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
rstest.workspace = true
serde.workspace = true
sx_codegen = { path = "../sx_codegen" }
sx_codegen_llvm = { path = "../sx_codegen_llvm" }
toml.workspace = true
